bootstrap style sheet is talking with the rest of my app, now on to making it look good

--- a/fb_odin_app/Gemfile
+++ b/fb_odin_app/Gemfile
@@ -1,5 +1,8 @@
 source 'https://rubygems.org'
 
+# bootstrap implementation...to make it pretty!
+gem 'bootstrap-sass',       '3.2.0.0'
+
 #facebook sign-in option, kidna ironic if you ask me
 gem 'omniauth-facebook'
 
