--- a/fb_odin_app/test/fixtures/users.yml
+++ b/fb_odin_app/test/fixtures/users.yml
@@ -4,8 +4,10 @@
 # model remove the '{}' from the fixture names and add the columns immediately
 # below each fixture, per the syntax in the comments below
 #
-one: {}
-# column: value
+user_one:
+  email: bob@bob.com
 #
-two: {}
-#  column: value
+user_two:
+   email: brenda@brenda.com
+
+
