--- a/fb_odin_app/test/fixtures/users.yml
+++ b/fb_odin_app/test/fixtures/users.yml
@@ -6,8 +6,10 @@
 #
 user_one:
   email: bob@bob.com
+  encrypted_password: <%= User.new.send(:password_digest, 'password') %>
 #
 user_two:
    email: brenda@brenda.com
+   encrypted_password: <%= User.new.send(:password_digest, 'password') %>
 
 
