--- a/fb_odin_app/test/fixtures/posts.yml
+++ b/fb_odin_app/test/fixtures/posts.yml
@@ -1,9 +1,9 @@
 # Read about fixtures at http://api.rubyonrails.org/classes/ActiveRecord/FixtureSet.html
 
-one:
+post_one:
   content: MyText
-  user_id: 
+  user_id:
 
-two:
+post_two:
   content: MyText
-  user_id: 
+  user_id:
