--- a/fb_odin_app/Gemfile
+++ b/fb_odin_app/Gemfile
@@ -1,5 +1,8 @@
 source 'https://rubygems.org'
 
+# factorygirl
+gem "factory_girl_rails", "~> 4.0"
+
 # bootstrap implementation...to make it pretty!
 gem 'bootstrap-sass',       '3.2.0.0'
 
